--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,9 +37,11 @@ body {
 article {
   background: white;
   width: 760px;
-  margin: 0 auto;
+  margin: -60px auto 0;
   padding: 40px;
   box-sizing: border-box;
+  position: relative;
+  z-index: -2;
 }
 
 header {
@@ -48,4 +50,12 @@ header {
   h1 {
     font-size: $font-size + 2;
   }
+}
+
+footer {
+  @include circleThing(100%, 150px, 150px, $color5, white);
+  font-size: $font-size - 4;
+  margin-top: -60px;
+  position: relative;
+  z-index: -4;
 }
